Responsiveness overlap fix for narrow viewports

--- a/Frontend/src/app/app.component.sass
+++ b/Frontend/src/app/app.component.sass
@@ -21,6 +21,7 @@ nav
 
 .webpageName
     @include font-size-1
+    margin-top: 2rem
     font-family: var(--main-font-bold)
     justify-self: center
     align-self: center
